--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "ba.unsa.etf.rma.spirale"
-        minSdk 15
+        minSdk 21
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -49,4 +49,10 @@ dependencies {
     testImplementation("org.hamcrest:hamcrest:x.y.z")
     androidTestImplementation 'androidx.test.espresso:espresso-core:+'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:+'
+    implementation("androidx.navigation:navigation-fragment-ktx:+")
+    implementation("androidx.navigation:navigation-ui-ktx:+")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:+")
+    androidTestImplementation("androidx.navigation:navigation-testing:+")
+    implementation("androidx.navigation:navigation-compose:+")
+
 }
