--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'ba.unsa.etf.rma.spirale'
+    namespace 'ba.etf.rma23.projekat'
     compileSdk 33
 
     defaultConfig {
-        applicationId "ba.unsa.etf.rma.spirale"
+        applicationId "ba.etf.rma23.projekat"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -18,6 +18,12 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField 'String', "CLIENT_TOKEN", CLIENT_TOKEN
+        }
+        debug {
+            buildConfigField 'String', "HASH_KEY", HASH_KEY
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -34,25 +40,32 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.test.espresso:espresso-contrib:3.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.android.material:material:1.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:+'
-    androidTestImplementation 'androidx.test:core-ktx:+'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:+'
-    testImplementation("org.hamcrest:hamcrest:x.y.z")
-    androidTestImplementation 'androidx.test.espresso:espresso-core:+'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:+'
-    implementation("androidx.navigation:navigation-fragment-ktx:+")
-    implementation("androidx.navigation:navigation-ui-ktx:+")
-    implementation("androidx.navigation:navigation-dynamic-features-fragment:+")
-    androidTestImplementation("androidx.navigation:navigation-testing:+")
-    implementation("androidx.navigation:navigation-compose:+")
+    implementation 'com.google.android.material:material:1.9.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
+    testImplementation("org.hamcrest:hamcrest:2.2")
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:'
+    implementation 'com.squareup.retrofit2:converter-gson:'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
 }
