--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+CLIENT_TOKEN = "5fj3z9q06k36cr8pppgxvg89qlyvzc"
+HASH_KEY = "7636a32b-1170-4dad-b5ab-195a1c77f15c"
