--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -66,6 +67,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:"
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation("androidx.room:room-runtime:2.5.1")
+    annotationProcessor "androidx.room:room-compiler:2.5.1"
+    implementation("androidx.room:room-ktx:2.5.1")
+    kapt("androidx.room:room-compiler:2.5.1")
+
 
 
 }
